--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,3 +10,4 @@ jobs:
       - run: make setup
       - run: make test
       - run: make lint
+      - uses: hexlet-components/hello-from-hexlet-action@release
